# E2T

./: .gitignore  LICENSE  README.md  setup.cfg
E2T/core/: __init__.py  _datamodule.py  _graph_datamodule.py  _graph_module.py  _module.py
E2T/utils/: __init__.py  _evaluator.py  _logger.py  _utils.py
examples/: README.md
examples/00_sample_data_preparation/: prepare_data.py
examples/01_domain_generalization/: README.md  run_experiment.py  sample.yaml
examples/HOIP/: README.md  run_experiment.py
examples/HOIP/00_sample_data_preparation/: README.md
examples/HOIP/01_domain_generalization/: README.md  run_experiment.py  sample.yaml
examples/HOIP/02_finetuning/: run_experiment.py
examples/RadonPy/: README.md
examples/RadonPy/00_sample_data_preparation/: README.md
examples/RadonPy/01_domain_generalization/: README.md  run_experiment.py  sample.yaml
examples/RadonPy/02_finetuning/: run_experiment.py
experiments/01_domain_generalization/radonpy/: README.md
experiments/01_domain_generalization/radonpy/E2T/: run_experiment.py
