[metadata]
name = E2T
version = 0.1.0
author = Kohei Noda
author_email = Kouhei_Noda@jsr.co.jp
description = Extrapolative episodic training
url = https://github.com/JSR-ISM-Smart-Chemistry-Lab/E2T

[options]
packages = find:
install_requires =
#    matplotlib
#    numpy
#    pandas
#    seaborn
#    joblib
#    torch
#    pytorch-lightning
#